--- a/kubernetes-examples-yamls/multipods-services.yaml
+++ b/kubernetes-examples-yamls/multipods-services.yaml
@@ -36,3 +36,17 @@ spec:
     - name: http
       port: 3001
       targetPort: 6000  
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mvcsvc
+spec:
+  selector: 
+    app: mvc
+  type: NodePort
+  ports:
+    - name: http
+      port: 3002
+      targetPort: 5000  
+      nodePort: 30001
