--- a/kubernetes-examples-yamls/webapi-usesecret-pod-env.yaml
+++ b/kubernetes-examples-yamls/webapi-usesecret-pod-env.yaml
@@ -13,3 +13,17 @@ spec:
       envFrom:
         - secretRef:
             name: mysecret
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: secretappsvc
+spec:
+  selector: 
+    app: webapi-usesecret
+  type: NodePort
+  ports:
+    - name: http
+      port: 3000
+      targetPort: 7000  
+      nodePort: 30000
