--- a/kubernetes-examples-yamls/mymvcapp.deployment.yaml
+++ b/kubernetes-examples-yamls/mymvcapp.deployment.yaml
@@ -13,7 +13,7 @@ spec:
       maxUnavailable: 1  # Default 25%
   selector:
     matchLabels:
-      app: my-nginx
+      app: my-mvcapp
   template:
     metadata:
       labels:
@@ -23,4 +23,18 @@ spec:
       - name: my-mvcappcontainer
         image: karthik1409docker/mvcwebapps:v1
         ports:
-        - containerPort: 5000    
+        - containerPort: 5000   
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mvcsvc
+spec:
+  selector: 
+    app: my-mvcapp
+  type: NodePort
+  ports:
+    - name: http
+      port: 3000
+      targetPort: 5000  
+      nodePort: 30000 
