--- a/kubernetes-examples-yamls/mymvcapp.deployment.yaml
+++ b/kubernetes-examples-yamls/mymvcapp.deployment.yaml
@@ -1,9 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-mvcappdeployment
+  name: mvcappdeployment
   labels:
-    app: my-mvcapp
+    app: mvcapp
 spec:
   replicas: 4
   strategy:
@@ -13,15 +13,15 @@ spec:
       maxUnavailable: 1  # Default 25%
   selector:
     matchLabels:
-      app: my-mvcapp
+      app: mvcapp
   template:
     metadata:
       labels:
-        app: my-mvcapp
+        app: mvcapp
     spec:
       containers:
-      - name: my-mvcappcontainer
-        image: karthik1409docker/mvcwebapps:v1
+      - name: mvcappcontainer
+        image: karthik1409docker/fork8sdeploymentstrategies:v1
         ports:
         - containerPort: 5000   
 ---
@@ -31,10 +31,10 @@ metadata:
   name: mvcsvc
 spec:
   selector: 
-    app: my-mvcapp
+     app: mvcapp
   type: NodePort
   ports:
     - name: http
-      port: 3000
+      port: 3001
       targetPort: 5000  
-      nodePort: 30000 
+      nodePort: 30005 
