--- a/example1.yaml
+++ b/example1.yaml
@@ -12,7 +12,7 @@ spec:
         - containerPort: 4200
 ---
 apiVersion: v1
-kind: Service
+kind: Service   # service
 metadata:
   name: angularapp-v1-svc
 spec:
