--- a/kubernetes-examples-yamls/webapi-useconfigmap-pod-vol.yaml
+++ b/kubernetes-examples-yamls/webapi-useconfigmap-pod-vol.yaml
@@ -1,3 +1,11 @@
+apiVersion: v1 
+kind: ConfigMap 
+metadata:
+  name: example-configmap 
+data:
+  #Configuration values can be set as key-value properties
+  MESSAGE: Hello from example-configmap
+---
 apiVersion: v1
 kind: Pod
 metadata:
