--- a/kubernetes-examples-yamls/webapi-usesecret-pod-volume.yaml
+++ b/kubernetes-examples-yamls/webapi-usesecret-pod-volume.yaml
@@ -8,7 +8,7 @@ spec:
   volumes:
     - name: myvolume
       secret:
-        name: mysecret
+        secretName: mysecret
   containers:
     - name: webapi-usesecret-container
       image: karthik1409docker/configmapsecretsapps:webapisecretapp
