--- a/kubernetes-examples-yamls/secretsprovider.yaml
+++ b/kubernetes-examples-yamls/secretsprovider.yaml
@@ -6,9 +6,9 @@ metadata:
 spec:
   provider: aws
   parameters:
-    objects:
-      objectName: arn:aws:secretsmanager:us-east-2:370384353359:secret:mysecret-u3jQgA
-      jmesPath:
+    objects: |
+      - objectName: arn:aws:secretsmanager:us-east-2:370384353359:secret:mysecret-u3jQgA
+      - jmesPath:
         - path: secret1
           objectAlias: s1
         - path: secret2
