--- a/kubernetes-examples-yamls/usesecretfromsecretsmanager-asvolumes.yaml
+++ b/kubernetes-examples-yamls/usesecretfromsecretsmanager-asvolumes.yaml
@@ -9,7 +9,7 @@ spec:
   - image: nginx
     name: nginx
     volumeMounts:
-    - name: mysecrets
+    - name: mysecretvolume
       mountPath: "/mysecrets"
   volumes:
     - name: mysecretvolume
