--- a/kubernetes-examples-yamls/usesecretfromsecretsmanager-asvolumes.yaml
+++ b/kubernetes-examples-yamls/usesecretfromsecretsmanager-asvolumes.yaml
@@ -1,13 +1,12 @@
 kind: Pod
 apiVersion: v1
 metadata:
-  name: nginx-secrets-store-inline
+  name: secrets-store-inline
   namespace: mynamespace
 spec:
   serviceAccountName: myserviceaccount
   containers:
-  - image: nginx
-    name: nginx
+  - image: karthik1409docker/angularapps:v1
     volumeMounts:
     - name: mysecretvolume
       mountPath: "/mysecrets"
