--- a/kubernetes-examples-yamls/usesecretfromsecretsmanager-asvolumes.yaml
+++ b/kubernetes-examples-yamls/usesecretfromsecretsmanager-asvolumes.yaml
@@ -7,6 +7,7 @@ spec:
   serviceAccountName: myserviceaccount
   containers:
   - image: karthik1409docker/angularapps:v1
+    name: mycontainer
     volumeMounts:
     - name: mysecretvolume
       mountPath: "/mysecrets"
