--- a/kubernetes-examples-yamls/usesecretfromsecretsmanager-asvolumes.yaml
+++ b/kubernetes-examples-yamls/usesecretfromsecretsmanager-asvolumes.yaml
@@ -14,6 +14,7 @@ spec:
   volumes:
     - name: mysecretvolume
       csi:
-        driver: secrets-store.csi.k8s.io
+        #driver: secrets-store.csi.k8s.io
+        driver: efs.csi.aws.com
         volumeAttributes:
           secretProviderClass: "mysecretprovider"
