--- a/kubernetes-examples-yamls/usesecretfromsecretsmanager-asvolumes.yaml
+++ b/kubernetes-examples-yamls/usesecretfromsecretsmanager-asvolumes.yaml
@@ -15,6 +15,6 @@ spec:
     - name: mysecretvolume
       csi:
         #driver: secrets-store.csi.k8s.io
-        driver: efs.csi.aws.com
+        driver: secrets-store.csi.k8s.io
         volumeAttributes:
           secretProviderClass: "mysecretprovider"
