--- a/kubernetes-examples-yamls/usesecretfromsecretsmanager-asvolumes.yaml
+++ b/kubernetes-examples-yamls/usesecretfromsecretsmanager-asvolumes.yaml
@@ -11,6 +11,7 @@ spec:
     volumeMounts:
     - name: mysecretvolume
       mountPath: "/mysecrets"
+      readOnly: true
   volumes:
     - name: mysecretvolume
       csi:
