--- a/kubernetes-examples-yamls/usesecretfromsecretsmanager-asvolumes.yaml
+++ b/kubernetes-examples-yamls/usesecretfromsecretsmanager-asvolumes.yaml
@@ -11,7 +11,7 @@ spec:
     volumeMounts:
     - name: mysecretvolume
       mountPath: "/mysecrets"
-      readOnly: true
+      readOnly: true  #read only
   volumes:
     - name: mysecretvolume
       csi:
