--- a/kubernetes-examples-yamls/usesecretfromsecretsmanager-asvolumes.yaml
+++ b/kubernetes-examples-yamls/usesecretfromsecretsmanager-asvolumes.yaml
@@ -17,5 +17,6 @@ spec:
       csi:
         #driver: secrets-store.csi.k8s.io
         driver: secrets-store.csi.k8s.io
+        readOnly: true
         volumeAttributes:
           secretProviderClass: "mysecretprovider"
