--- a/kubernetes-examples-yamls/secretsprovider.yaml
+++ b/kubernetes-examples-yamls/secretsprovider.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   provider: aws
   parameters:
-    objects: |
+    objects: 
       - objectName: "arn:aws:secretsmanager:us-east-2:370384353359:secret:mysecret-u3jQgA"
       - jmesPath:
         - path: secret1
