--- a/kubernetes-examples-yamls/secretsprovider.yaml
+++ b/kubernetes-examples-yamls/secretsprovider.yaml
@@ -7,7 +7,7 @@ spec:
   provider: aws
   parameters:
     objects:  |
-      - objectName: "mysecret"
+      - objectNamexx: "mysecret"
         objectType: "secretsmanager"
       - jmesPath:
         - path: secret1
