--- a/kubernetes-examples-yamls/secretsprovider.yaml
+++ b/kubernetes-examples-yamls/secretsprovider.yaml
@@ -7,10 +7,10 @@ spec:
   provider: aws
   parameters:
     objects:  |
-      - objectNamexx: "mysecret"
+      - objectName: "mysecret"
         objectType: "secretsmanager"
-      - jmesPath:
-        - path: secret1
-          objectAlias: s1
-        - path: secret2
-          objectAlias: s2
+          jmesPath:
+            - path: secret1
+              objectAlias: s1
+            - path: secret2
+              objectAlias: s2
