--- a/kubernetes-examples-yamls/secretsprovider.yaml
+++ b/kubernetes-examples-yamls/secretsprovider.yaml
@@ -7,8 +7,7 @@ spec:
   provider: aws
   parameters:
     objects: - |
-      - objectName: "mysecret"
-        objectType: "secretsmanager"
+      - objectName: "arn:aws:secretsmanager:us-east-2:370384353359:secret:mysecret-u3jQgA"
           jmesPath:
             - path: secret1
               objectAlias: s1
